ebus Daemon (ebusd) - ChangeLog
===============================

2014-02-20:
* Missing void declarations in various function parameter added.

2014-01-22:
* autogen.sh modified.

2014-01-05:
* Missing daemon option -n (nodevicecheck) fixed.

2013-12-07:
* Vaillant configuration files for VWx Heat Pumps added.

2013-12-04:
* Vaillant configuration files for VR 60/3 added.
* Vaillant configuration files for VR 90/3 changed.
* Vaillant configuration files for CI (Control Interface) added.

2013-12-02:
* Vaillant configuration files for VPM 30/35 W added.
* Vaillant configuration files for VR 90/3 added.

2013-12-01:
* New branch "newDataTypes" created.
* More data types (char, int, long, float) added.
* Vaillant configuration filse for VPM 20 S added.

2013-11-29:
* New daemon option nodevicecheck added.

2013-11-19:
* Data type of struct commands.s_type changed from integer to char[2]. Possible
  data types are: BR, MM, MS. (BroadCast, MasterMaster, MasterSlave)
* Wolf configuration files converted to new version.
* README fixed.

2013-11-06:
* Specific vaillant data type "ulg" (unsigned long) added.

2013-09-20:
* Removed unnecessary spaces located behind last return value. (thx JuMi2006 / KNX Forum)
* Removed more unneeded space characters. (thx JuMi2006 / KNX Forum)

2013-09-04:
* Fixed eb_recv_data_get function. (Replaced strncpy with memcpy.)

2013-08-26:
* Modified hex decode routine. (To set start/end point of data bytes.)
* Some cosmetic changes.

2013-05-28:
* Modified timeout statement, too force serial device reconnect. (thx aloz77 / KNX Forum)

2013-05-27:
* Added timeout to select at main_loop. (thx aloz77 / KNX Forum)

2013-05-25:
* Modified hex Dump (EBH) for active sent messages. (thx Fry / KNX Forum)
* Changed telnet connecting log level info from L_NET to L_DBG.
* Added ability to reopen temporary removed serial device. (thx aloz77 / KNX Forum)
  Attention: If the serial device is removed, network socket will be closed too.