@@ -64,7 +64,7 @@ eb_htoi(const char *buf)
 void
 eb_esc(unsigned char *buf, int *buflen)
 {
-	unsigned char tmp[SERIAL_BUFSIZE];
+	unsigned char tmp[BUS_DEVICE_BUFSIZE];
 	int tmplen, i;
 
 	memset(tmp, '\0', sizeof(tmp));
@@ -101,7 +101,7 @@ eb_esc(unsigned char *buf, int *buflen)
 void
 eb_unesc(unsigned char *buf, int *buflen)
 {
-	unsigned char tmp[SERIAL_BUFSIZE];
+	unsigned char tmp[BUS_DEVICE_BUFSIZE];
 	int tmplen, i, found;
 
 	memset(tmp, '\0', sizeof(tmp));
